--- a/index.html
+++ b/index.html
@@ -4,6 +4,175 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css"/>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+        <nav class="nav">
+            <a class="logo" href="./index.html">WebStudio</a>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item">
+                        <a class="nav-menu-link" href="#">Studio</a>
+                    </li>
+                    <li class="nav-menu-item" >
+                        <a class="nav-menu-link" href="#">Portfolio</a>
+                    </li>
+                    <li class="nav-menu-item" >
+                        <a class="nav-menu-link" href="#">Contacts</a>
+                    </li>
+                </ul>
+        </nav>
+        <ul class="socials">
+            <li class="socials-item">
+                <a class="socials-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a class="socials-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+        </ul>
+    </header>
+    <main>
+        <!--Hero section-->
+        <section class="hero">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button class="btn btn-accent" type="button">Order Service</button>
+        </section>
+        <!--Benefits section-->
+        <section class="benefits">
+            <h2 hidden>Benefits section</h2>
+            <ul class="benefits-list">
+                <li class="benefits-item">
+                    <h3 class="benefits-caption">Strategy</h3>
+                    <p class="benefits-desc">Our goal is to identify the business problem to walk away with the perfect and creative solution.Bring the key message to the brand's audience for the best price within the shortest possible time. Research and confirm brands with the strongest digital growth opportunities and minimize risk. Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+                <li class="benefits-item">
+                    <h3 class="benefits-caption">Punctuality</h3>
+                    <p class="benefits-desc">Our goal is to identify the business problem to walk away with the perfect and creative solution. Bring the key message to the brand's audience for the best price within the shortest possible time. Research and confirm brands with the strongest digital growth opportunities and minimize risk. Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+                <li class="benefits-item">
+                    <h3 class="benefits-caption" >Diligence</h3>
+                    <p class="benefits-desc">Our goal is to identify the business problem to walk away with the perfect and creative solution. Bring the key message to the brand's audience for the best price within the shortest possible time. Research and confirm brands with the strongest digital growth opportunities and minimize risk. Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+                <li class="benefits-item">
+                    <h3 class="benefits-caption">Technologies</h3>
+                    <p class="benefits-desc">Our goal is to identify the business problem to walk away with the perfect and creative solution. Bring the key message to the brand's audience for the best price within the shortest possible time. Research and confirm brands with the strongest digital growth opportunities and minimize risk. Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+        </section>
+        <!--Team section-->
+        <section class="team">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-list">
+                <li class="team-item">
+                   <img 
+                   class="team-ill"
+                   src="./images/mark.jpg" 
+                   alt="Product Designer"
+                   width="264"
+                   height="260"
+                   />
+                    <h3 class="team-name">Mark Guerrero</h3>
+                    <p class="team-subtitle">Product Designer</p>
+                </li>
+                <li class="team-item">
+                <img 
+                class="team-ill"
+                src="./images/tom.jpg" 
+                   alt="Frontend Developer"
+                   width="264"
+                   height="260"
+                   />
+                    <h3 class="team-name">Tom Ford</h3>
+                    <p class="team-subtitle">Frontend Developer</p>
+                </li>
+                <li class="team-item">
+                    <img 
+                    class="team-ill"
+                    src="./images/camila.jpg" 
+                   alt="Marketing"
+                   width="264"
+                   height="260"
+                   />
+                    <h3 class="team-name">Camila Garcia</h3>
+                    <p class="team-subtitle">Marketing</p>
+                </li>
+                <li class="team-item">
+                    <img 
+                    class="team-ill"
+                    src="./images/daniel.jpg" 
+                   alt="UI Designer"
+                   width="264"
+                   height="260"
+                   />
+                    <h3 class="team-name">Daniel Wilson</h3>
+                    <p class="team-subtitle">UI Designer</p>
+                </li>
+            </ul>
+        </section>
+        <!--Portfolio section-->
+        <section class="portfolio">
+            <h2 class="portfolio-title">Our Portfolio</h2>
+                <ul class="portfolio-list">
+                    <li class="portfolio-item">
+                        <img class="portfolio-ill" src="./images/portfolio-cnt/banking-app.png"
+                        alt="Banking App"
+                        width="360"
+                        height="300"
+                        />
+                        <h3 class="portfolio-name">Banking App</h3>
+                        <p class="portfolio-subtitle">App</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-ill" src="./images/portfolio-cnt/cashless-pay.jpg"
+                        alt="Cashless Payment"
+                        width="360"
+                        height="300"
+                        />
+                        <h3 class="portfolio-name">Cashless Payment</h3>
+                        <p class="portfolio-subtitle">Marketing</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-ill" src="./images/portfolio-cnt/meditation-app.jpg"
+                        alt="Meditation App"
+                        width="360"
+                        height="300"
+                        />
+                        <h3 class="portfolio-name">Meditation App</h3>
+                        <p class="portfolio-subtitle">App</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-ill" src="./images/portfolio-cnt/taxi-service.jpg"
+                        alt="Taxi Service"
+                        width="360"
+                        height="300"
+                        />
+                        <h3 class="portfolio-name">Taxi Service</h3>
+                        <p class="portfolio-subtitle">Marketing</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-ill" src="./images/portfolio-cnt/screen-illustrations.jpg"
+                        alt="Screen Illustrations"
+                        width="360"
+                        height="300"
+                        />
+                        <h3 class="portfolio-name">Screen Illustrations</h3>
+                        <p class="portfolio-subtitle">Design</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-ill" src="./images/portfolio-cnt/online-courses.jpg"
+                        alt="Online Courses"
+                        width="360"
+                        height="300"
+                        />
+                        <h3 class="portfolio-name">Online Courses</h3>
+                        <p class="portfolio-subtitle">Marketing</p>
+                    </li>
+                </ul>
+        </section>
+    </main>
+    <footer class="footer">
+    <p class="footer-logo">WebStudio</p>
+    <p class="footer-slogan">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
+  </body>
 </html>
