--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@3.0.1/modern-normalize.min.css"/>
     <link rel="stylesheet" href="./css/styles.css"/>
   </head>
   <body>
     <header class="header">
         <nav class="nav">
-            <a class="logo" href="./index.html">WebStudio</a>
+            <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
                 <ul class="nav-menu">
                     <li class="nav-menu-item">
                         <a class="nav-menu-link" href="#">Studio</a>
@@ -22,14 +26,16 @@
                     </li>
                 </ul>
         </nav>
-        <ul class="socials">
-            <li class="socials-item">
-                <a class="socials-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <address class="contacts">
+        <ul class="contacts-list">
+            <li class="contacts-item">
+                <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a class="socials-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
+        </address>
     </header>
     <main>
         <!--Hero section-->
@@ -39,7 +45,7 @@
         </section>
         <!--Benefits section-->
         <section class="benefits">
-            <h2 hidden>Benefits section</h2>
+            <h2 class="visually-hidden">Benefits section</h2>
             <ul class="benefits-list">
                 <li class="benefits-item">
                     <h3 class="benefits-caption">Strategy</h3>
@@ -61,7 +67,7 @@
         </section>
         <!--Team section-->
         <section class="team">
-            <h2 class="team-title">Our Team</h2>
+            <h2 class="team-title section-title">Our Team</h2>
             <ul class="team-list">
                 <li class="team-item">
                    <img 
@@ -111,7 +117,7 @@
         </section>
         <!--Portfolio section-->
         <section class="portfolio">
-            <h2 class="portfolio-title">Our Portfolio</h2>
+            <h2 class="portfolio-title section-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <img class="portfolio-ill" src="./images/portfolio-cnt/banking-app.png"
@@ -171,7 +177,7 @@
         </section>
     </main>
     <footer class="footer">
-    <p class="footer-logo">WebStudio</p>
+    <p class="footer-logo">Web<span class="footer-logo-part">Studio</span></p>
     <p class="footer-slogan">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
