--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
         <nav class="nav">
-            <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+            <a class="logo" href="./index.html"><span class="logo-part">Web</span>Studio</a>
                 <ul class="nav-menu">
                     <li class="nav-menu-item">
                         <a class="nav-menu-link" href="#">Studio</a>
@@ -45,23 +45,23 @@
         </section>
         <!--Benefits section-->
         <section class="benefits">
-            <h2 class="visually-hidden">Benefits section</h2>
+            <h2 class="section-title">Our Features</h2>
             <ul class="benefits-list">
                 <li class="benefits-item">
                     <h3 class="benefits-caption">Strategy</h3>
-                    <p class="benefits-desc">Our goal is to identify the business problem to walk away with the perfect and creative solution.Bring the key message to the brand's audience for the best price within the shortest possible time. Research and confirm brands with the strongest digital growth opportunities and minimize risk. Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <p class="benefits-desc">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="benefits-item">
                     <h3 class="benefits-caption">Punctuality</h3>
-                    <p class="benefits-desc">Our goal is to identify the business problem to walk away with the perfect and creative solution. Bring the key message to the brand's audience for the best price within the shortest possible time. Research and confirm brands with the strongest digital growth opportunities and minimize risk. Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <p class="benefits-desc">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="benefits-item">
                     <h3 class="benefits-caption" >Diligence</h3>
-                    <p class="benefits-desc">Our goal is to identify the business problem to walk away with the perfect and creative solution. Bring the key message to the brand's audience for the best price within the shortest possible time. Research and confirm brands with the strongest digital growth opportunities and minimize risk. Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <p class="benefits-desc">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="benefits-item">
                     <h3 class="benefits-caption">Technologies</h3>
-                    <p class="benefits-desc">Our goal is to identify the business problem to walk away with the perfect and creative solution. Bring the key message to the brand's audience for the best price within the shortest possible time. Research and confirm brands with the strongest digital growth opportunities and minimize risk. Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <p class="benefits-desc">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
@@ -177,7 +177,7 @@
         </section>
     </main>
     <footer class="footer">
-    <p class="footer-logo">Web<span class="footer-logo-part">Studio</span></p>
+    <p class="footer-logo"><span class="footer-logo-part">Web</span>Studio</p>
     <p class="footer-slogan">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
