--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h2 class="portfolio-title section-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <img class="portfolio-ill" src="./images/portfolio-cnt/banking-app.png"
+                        <img class="portfolio-ill" src="./images/portfolio-cnt/banking-app.jpg"
                         alt="Banking App"
                         width="360"
                         height="300"
@@ -177,7 +177,7 @@
         </section>
     </main>
     <footer class="footer">
-    <p class="footer-logo"><span class="footer-logo-part">Web</span>Studio</p>
+    <a class="footer-logo" href="./index.html"><span class="footer-logo-part">Web</span>Studio</a>
     <p class="footer-slogan">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
